Hello world working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,12 @@
-cmake_minimum_required(VERSION 3.24)
+cmake_minimum_required(VERSION 3.19)
 project(OOP_homeworks)
 
-set(CMAKE_CXX_STANDARD 17)
+include_directories(lib)
+include_directories(src)
+include_directories(test)
 
-add_executable(OOP_homeworks main.cpp)
+add_subdirectory(lib/googleTest)
+add_subdirectory(src)
+add_subdirectory(test)
+
+set(CMAKE_CXX_STANDARD 14)
