--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
-file(GLOB_RECURSE SOURCES )  #Todas las fuentes sin el Main
+#file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true *.h *.cpp *.cc)
+
+file(GLOB_RECURSE SOURCES Persona.cpp Persona.h)  #Todas las fuentes sin el Main
 
 
 set(BINARY ${CMAKE_PROJECT_NAME})  # El nombre va a a estar en el CMake principal
@@ -6,12 +8,13 @@ set(BINARY ${CMAKE_PROJECT_NAME})  # El nombre va a a estar en el CMake principa
 # Definicion variable sources
 set(SOURCES ${SOURCES})
 
-# STATIC libraries are archives of object files for use when linking other targets
+ # STATIC libraries are archives of object files for use when linking other targets
 #add_library(${CMAKE_PROJECT_NAME}_lib Calculator.h Calculator.cpp)  #construye una libraria que tiene los test que vamos a ejecutar
 
 add_library(${CMAKE_PROJECT_NAME}_lib ${SOURCES})
 
 target_link_libraries(${CMAKE_PROJECT_NAME}_lib)
 
+
 # Instrucción que define el ejecutable a partir de las fuentes definidas
-add_executable(${BINARY}_exe ${SOURCES} Main.cpp)  # Las fuentes mas el archivo main
+add_executable(${BINARY}_exe ${SOURCES} Main.cpp Persona.cpp Persona.h)  # Las fuentes mas el archivo main
